:art: fix jump filters portfolio + fix opacity img

--- a/inte/css/main.css
+++ b/inte/css/main.css
@@ -1334,6 +1334,9 @@ select::-ms-expand {
 .single-post .content-main {
   margin: 0 0 20px;
 }
+.js .content-main img:not(.no-scroll), .js .content-main .special-cat {
+  opacity: 0;
+}
 
 .content-header-transparent, .content-header {
   padding: 100px 0 5px;
@@ -1512,7 +1515,7 @@ select::-ms-expand {
 /* Portfolio */
 .portfolio-list {
   position: relative;
-  margin: 185px 0 0;
+  margin: 250px 0 0;
   z-index: 1;
   background: #303b3d;
   -webkit-backface-visibility: hidden;
@@ -1885,6 +1888,8 @@ select::-ms-expand {
   width: 100%;
   padding: 30px 0 25px;
   border-bottom: 1px solid #ccd1d2;
+  position: absolute;
+  top: 0;
   z-index: 15;
   background: #fff;
   text-align: center;
@@ -1902,6 +1907,9 @@ select::-ms-expand {
 .portfolio-filters.fixed.on {
   -webkit-transform: translate3d(0, -99px, 0);
           transform: translate3d(0, -99px, 0);
+}
+.portfolio-filters.single-on + .content-main .portfolio-list {
+  margin-top: 150px;
 }
 
 .portfolio-header {
